# kwin-effect-shaders_gui

./: .gitignore  CMakeLists.txt  README.md  install.sh
src/: CMakeLists.txt  ShadersGUI.cpp  ShadersGUI.h  ShadersGUI.ui  ShadersGUI.ui.autosave  main.cpp
